--- a/start.ipynb
+++ b/start.ipynb
@@ -2,21 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-abdaf5cf0dfb>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-abdaf5cf0dfb>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    pip install numpy\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pip install numpy\n",
-    "pip install rpy2\n"
+    "import glob\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "#pip install numpy\n",
+    "#pip install rpy2\n"
    ]
   },
   {
